--- a/tools/wpf/isetool/MainWindow.xaml
+++ b/tools/wpf/isetool/MainWindow.xaml
@@ -2,17 +2,16 @@
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:IseControls="clr-namespace:isetool.Controls"
+    xmlns:IseConverter="clr-namespace:isetool.Converter"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-
     MinWidth="800" MinHeight="600"
     Title="ISE Studio"
     Height="800" Width="1200" 
     ResizeMode="CanResize"
     GlowBrush="{DynamicResource AccentColorBrush}"
-    DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
-    Loaded="MetroWindow_Loaded">
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
     <Controls:MetroWindow.LeftWindowCommands>
         <Controls:WindowCommands>
             <Image Source="./Asset/icon.png" Margin="5,0,0,0"></Image>
@@ -32,12 +31,16 @@
                 <StackPanel>
                     <PasswordBox Height="30" IseControls:BindablePasswordBox.Password="{Binding DialogPassword,Mode=TwoWay}" IseControls:BindablePasswordBox.Attach="True"/>
                     <StackPanel HorizontalAlignment="Right" Margin="0,10,0,0" Orientation="Horizontal">
-                        <Button Content="Submit" Width="100" Command="{Binding DialogSubmitCommand}" Click="Password_Dialog_Button_Click"></Button>
-                        <Button Content="Cancel" Margin="10,0,0,0" Width="100" Click="Password_Dialog_Button_Click"></Button>
+                        <Button Content="Submit" Width="100" Command="{Binding DialogSubmitCommand}"></Button>
+                        <Button Content="Cancel" Margin="10,0,0,0" Width="100" Command="{Binding DialogCancelCommand}"></Button>
                     </StackPanel>
                 </StackPanel>
 
             </Dialog:SimpleDialog>
+
+            <IseConverter:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+            <IseConverter:ModeToSizeConverter x:Key="ModeToSizeConverter" />
+            <IseConverter:ModeToVisibilityConverter x:Key="ModeToVisibilityConverter" />
         </ResourceDictionary>
     </Window.Resources>
     
@@ -49,7 +52,7 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="250"></ColumnDefinition>
+            <ColumnDefinition Width="{Binding StMode,Converter={StaticResource ModeToSizeConverter}}"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <!--<Menu HorizontalAlignment="Stretch">
@@ -71,14 +74,14 @@
 
         <Grid Grid.Row="0" Background="Black" x:Name="gridBG">
             <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
-            <Grid>
+            <Grid Width="{Binding ImageWidth}" Height="{Binding ImageHeight}" >
                 <Image x:Name="imageViewer" Source="{Binding Image}" Width="{Binding ImageWidth}" Height="{Binding ImageHeight}" Stretch="Uniform" HorizontalAlignment="Center" VerticalAlignment="Center"></Image>
                 <IseControls:MultiSelectionControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ImageWidth}" Height="{Binding ImageHeight}" Background="Transparent"/>
             </Grid>
             </ScrollViewer>
         </Grid>
 
-        <Grid VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" Background="#333333" Visibility="Visible">
+        <Grid VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" Background="#333333" Visibility="{Binding StMode,Converter={StaticResource ModeToVisibilityConverter}}">
             <StackPanel Margin="10" >
                 <Border Padding="10" Background="#555555" Margin="0,0,0,15">
                     <StackPanel >
@@ -87,8 +90,8 @@
                         <Border Height="1" Background="Gray" Margin="0,5,0,10"></Border>
 
                         <TextBlock Text="Mode" Foreground="White"></TextBlock>
-                        <ComboBox>
-                            <ComboBoxItem Content="DES24"/>
+                        <ComboBox SelectedIndex="0">
+                            <ComboBoxItem Content="DES3(24bit)"/>
                         </ComboBox>
 
                         <TextBlock Text="Password" Foreground="White" Margin="0,10,0,0"></TextBlock>
@@ -102,7 +105,7 @@
                         <TextBlock Text="Selection" Foreground="White" FontSize="20" Margin="0,0,0,5"></TextBlock>
                         <Border Height="1" Background="Gray" Margin="0,5,0,10"></Border>
                         <StackPanel Orientation="Horizontal">
-                            <ToggleButton VerticalAlignment="Top" Margin="10">
+                            <ToggleButton VerticalAlignment="Top" Margin="10" IsChecked="True">
                                 <Rectangle Width="20" Height="20">
                                     <Rectangle.Fill>
                                         <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_base_select}"/>
@@ -110,29 +113,29 @@
                                 </Rectangle>
                             </ToggleButton>
 
-                            <ToggleButton VerticalAlignment="Top" Margin="10">
+                            <Button VerticalAlignment="Top" Margin="10" Command="{Binding MenuSelectionFaceCommand}">
                                 <Rectangle Width="20" Height="20">
                                     <Rectangle.Fill>
                                         <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_people_status}"/>
                                     </Rectangle.Fill>
                                 </Rectangle>
-                            </ToggleButton>
+                            </Button>
 
-                            <ToggleButton VerticalAlignment="Top" Margin="10">
+                            <Button VerticalAlignment="Top" Margin="10" Command="{Binding MenuSelectionAllCommand}">
                                 <Rectangle Width="20" Height="20">
                                     <Rectangle.Fill>
                                         <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_border_all}"/>
                                     </Rectangle.Fill>
                                 </Rectangle>
-                            </ToggleButton>
+                            </Button>
 
-                            <ToggleButton VerticalAlignment="Top" Margin="10">
+                            <Button VerticalAlignment="Top" Margin="10" Command="{Binding MenuSelectionCancelCommand}">
                                 <Rectangle Width="20" Height="20">
                                     <Rectangle.Fill>
                                         <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_cancel}"/>
                                     </Rectangle.Fill>
                                 </Rectangle>
-                            </ToggleButton>
+                            </Button>
                         </StackPanel>
                         <StackPanel Background="#222222">
                             <Grid Margin="5" Height="15">
@@ -182,7 +185,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal" Margin="15,0,0,0" VerticalAlignment="Center" Grid.Column="0">
+            <!--<StackPanel Orientation="Horizontal" Margin="15,0,0,0" VerticalAlignment="Center" Grid.Column="0">
                 <StackPanel Width="55">
                     <Button Width="50" Height="50" Style="{DynamicResource MetroCircleButtonStyle}" Command="{Binding MenuZoominCommand}">
                         <StackPanel Orientation="Vertical">
@@ -209,7 +212,7 @@
                     <TextBlock Text="Zoom out" Foreground="White" HorizontalAlignment="Center"></TextBlock>
                 </StackPanel>
             </StackPanel>
-            <!--<StackPanel Orientation="Horizontal" Margin="15,0,0,0" VerticalAlignment="Center" Grid.Column="0">
+            <StackPanel Orientation="Horizontal" Margin="15,0,0,0" VerticalAlignment="Center" Grid.Column="0">
                 <StackPanel Width="55">
                     <Button Width="50" Height="50" Style="{DynamicResource MetroCircleButtonStyle}">
                         <StackPanel Orientation="Vertical">
