--- a/tools/android/res/layout/activity_main.xml
+++ b/tools/android/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <ImageView
+        android:id="@+id/viewer_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray" >
+    </ImageView>
 
     <Button
         android:id="@+id/test"
