--- a/tools/android/res/values/themes.xml
+++ b/tools/android/res/values/themes.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <!-- the theme applied to the application or activity -->
     <style name="IseToolActionBarTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/IseToolActionBar</item>
+        <item name="android:actionBarSplitStyle">@style/IseToolActionBar</item>
     </style>
 
     <!-- ActionBar styles -->
-    <style name="IseToolActionBar"
-           parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+    <style name="IseToolActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">#576573</item>
+        <item name="android:backgroundSplit">#576573</item>
+        
     </style>
+
 </resources>
