--- a/tools/android/res/layout/activity_main.xml
+++ b/tools/android/res/layout/activity_main.xml
@@ -30,95 +30,10 @@
                 android:layout_height="match_parent" />
         </RelativeLayout>
 
-        <LinearLayout
+        <com.pigtools.isetool.view.BottomToggleLayout
+            android:id="@+id/bottom_layout"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_alignParentBottom="true"
-            android:background="#576573"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/btn_selection_n" >
-                </ImageView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#cc555555"
-                android:orientation="horizontal" />
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_people_n" >
-                </ImageView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#cc555555"
-                android:orientation="horizontal" />
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_text_n" >
-                </ImageView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#cc555555"
-                android:orientation="horizontal" />
-
-            <LinearLayout
-                android:id="@+id/open_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_cancel_n" >
-                </ImageView>
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="55dp" />
     </LinearLayout>
 
     <LinearLayout
