--- a/tools/android/res/layout/layout_drawer.xml
+++ b/tools/android/res/layout/layout_drawer.xml
@@ -38,10 +38,15 @@
                 android:textColor="@android:color/white"
                 android:textSize="12dp" />
 
-            <Spinner
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:background="#333333" />
+                android:background="#333333"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:text="DES3(24bit)"
+                android:textColor="#ffffff"
+                android:textSize="11dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -56,8 +61,10 @@
                 android:layout_height="35dp"
                 android:background="#333333"
                 android:inputType="textPassword"
+                android:paddingLeft="5dp"
                 android:textColor="#ffffff"
-                android:textCursorDrawable="@drawable/edittext_cursor" />
+                android:textCursorDrawable="@drawable/edittext_cursor"
+                android:textSize="11dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -86,8 +93,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:background="#333333"
                 android:minHeight="180dp"
                 android:orientation="vertical" >
@@ -146,7 +152,8 @@
                 <ListView
                     android:id="@+id/secure_listview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="0dp"
+                    android:layout_weight="1" >
                 </ListView>
             </LinearLayout>
         </LinearLayout>
