--- a/tools/android/res/layout/activity_main.xml
+++ b/tools/android/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg" >
+    android:background="#333333" >
 
     <LinearLayout
         android:id="@+id/content_frame"
@@ -15,6 +15,23 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:background="#222222"
+                android:gravity="center"
+                android:padding="5dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ISE STUDIO"
+                    android:textColor="#555555"
+                    android:textSize="8dp" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/preview_image"
@@ -33,7 +50,7 @@
         <com.pigtools.isetool.view.BottomToggleLayout
             android:id="@+id/bottom_layout"
             android:layout_width="match_parent"
-            android:layout_height="55dp" />
+            android:layout_height="48dp" />
     </LinearLayout>
 
     <LinearLayout
