--- a/tools/android/res/layout/layout_rectlist_item.xml
+++ b/tools/android/res/layout/layout_rectlist_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@color/drawer_list_text"
         android:textSize="12dp" />
 
     <TextView
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@color/drawer_list_text"
         android:textSize="12dp" />
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@color/drawer_list_text"
         android:textSize="12dp" />
 
     <TextView
@@ -38,7 +38,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@color/drawer_list_text"
         android:textSize="12dp" />
 
 </LinearLayout>
