isetool-wp81 / porting make jpgx,pngx api for wp

--- a/tools/wp8.1/IseStudio/MainPage.xaml
+++ b/tools/wp8.1/IseStudio/MainPage.xaml
@@ -9,6 +9,13 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Pivot>
+            <PivotItem Header="Image">
+                
+            </PivotItem>
+            <PivotItem Header="Setting">
+                <Button x:Name="OpenBtn" Content="Open" Click="OpenBtn_Click"></Button>
+            </PivotItem>
+        </Pivot>
     </Grid>
 </Page>
